get lead, delete lead.
