# api/swagger/swagger.yaml
@@ -98,6 +98,46 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /crm/lead/{leadId}:
+    x-swagger-router-controller: crm_lead
+    delete:
+      tags: ["SuiteCRM"]
+      description: Deletes a Lead, rermoving it from the database permanetly.
+      operationId: deleteLead
+      parameters:
+        - name: leadId
+          in: path
+          description: ID of the lead to delete
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Deleted"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags: ["SuiteCRM"]
+      description: Returns a lead object matching the specified leadId.
+      operationId: getLead
+      parameters:
+        - name: leadId
+          in: path
+          description: ID of the lead to fetch
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Lead"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
